fix alignment on our and at text

--- a/css/empireBS.css
+++ b/css/empireBS.css
@@ -105,13 +105,17 @@
    line-height: 1.47;
    letter-spacing: normal;
    text-align: right;
+   padding-left: 120px;
+   padding-right: 20px;
    color: #2199d2;
 }
 
 .at-empire {
    max-width: 100%;
    height: 275;
-   /* width: 480px;
+   padding-left: 0px;
+   padding-right: 0px;
+ /* width: 480px;
    height: 275px;  */
    /* object-fit: contain;  */
 }
@@ -127,6 +131,8 @@
    line-height: 2.11;
    letter-spacing: normal;
    text-align: right;
+   padding-left: 120px;
+   padding-right: 20px;
    color: #4a4a4a;
 }
 
